# Serenity-Discord-Bot-Template

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: id.rs  mod.rs  ping.rs
